add paramfit Makefiles

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,6 +14,7 @@ full:
 	@cd antechamber && mkdir -p $(BINDIR)/wrapped_progs && $(MAKE) install
 	@cd nmr_aux && $(MAKE) nmr_aux
 	@cd xtalutil && make xtalutil
+	@cd paramfit && make paramfit
 
 serial:
 	@cd msander && $(MAKE) msander
@@ -42,6 +43,7 @@ clean:
 	-(cd antechamber && $(MAKE) clean )
 	-(cd nmr_aux && $(MAKE) clean )
 	-(cd xtalutil && $(MAKE) clean )
+	-(cd paramfit && $(MAKE) clean )
 
 uninstall: clean
 	-(cd $(BINDIR) && /bin/rm -f msander* \
