--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -76,16 +76,16 @@ XRAY_OBJS = \
 
 .PHONY: dummy
 
-msander: $(BINDIR)/msander
+msander$(SFX): $(BINDIR)/msander$(SFX)
 
-msander.LES: $(BINDIR)/msander.LES
+msander.LES$(SFX): $(BINDIR)/msander.LES$(SFX)
 
-msander.cuda: $(BINDIR)/msander.cuda
+msander.cuda$(SFX): $(BINDIR)/msander.cuda$(SFX)
 
 dummy:
 
 #---------------------------------------------------------------------------
-$(BINDIR)/msander: libs $(MMOBJ) \
+$(BINDIR)/msander$(SFX): libs $(MMOBJ) \
          $(NFE_OBJECTS) $(XRAY_OBJS) $(PLUMED_DEPENDENCIES) \
          dummy
 	@echo "[MSANDER]  FC $@"
@@ -94,7 +94,7 @@ $(BINDIR)/msander: libs $(MMOBJ) \
 	     -L$(LIBDIR) $(NETCDFLIBF) $(FLIBSF) $(LDFLAGS) $(PLUMED_LOAD)
 
 #---------------------------------------------------------------------------
-$(BINDIR)/msander.cuda: libs lib_cuda $(MMOBJ) \
+$(BINDIR)/msander.cuda$(SFX): libs lib_cuda $(MMOBJ) \
          $(NFE_OBJECTS) $(XRAY_OBJS) xray_interface_impl_gpu.o \
          $(PLUMED_DEPENDENCIES) dummy
 	@echo "[MSANDER]  FC $@"
@@ -105,7 +105,7 @@ $(BINDIR)/msander.cuda: libs lib_cuda $(MMOBJ) \
          -lcurand -lcufft -lcudart -lcudadevrt -lgfortran -lstdc++
 
 #---------------------------------------------------------------------------
-$(BINDIR)/msander.LES: libs $(LESOBJ) \
+$(BINDIR)/msander.LES$(SFX): libs $(LESOBJ) \
          $(NFE_OBJECTS) $(XRAY_OBJS) \
          $(PLUMED_DEPENDENCIES) dummy
 	@echo "[MSANDER_LES]  FC $@"
