--- a/src/rism/Makefile
+++ b/src/rism/Makefile
@@ -12,22 +12,31 @@ LIBOBJ = array_util.o rism_util.o \
 	rism3d_c.o rism3d_potential_c.o rism3d_restart.o \
 	rism3d_xyzv.o rism3d_opendx.o rism3d_mrc.o \
 	rism3d_solvent_c.o rism3d_solute_c.o \
-	rism3d_fft.o rism_parm.o rism_io.o \
+	pubfft.o rism3d_fft.o rism_parm.o rism_io.o \
 	mdiis_orig_c.o mdiis_blas_c.o mdiis_blas2_c.o mdiis_c.o \
 	erfcfun.o safemem.o constants_rism.o \
-	bspline.o  fftw3.o rism_report_c.o amber_rism_interface.o
+	bspline.o  fftw3.o rism_report_c.o amber_rism_interface.o \
+	rism1d_c.o solvmdl_c.o rism1d_potential_c.o\
+	rism1d_closure_c.o rism1d_kh_c.o rism1d_hnc_c.o rism1d_py_c.o \
+	rism1d_mv0_c.o rism1d_psen_c.o rism1d_nub_c.o rism1d_polyt_c.o \
+	rism1d_devb_c.o rism_timer_c.o constants.o quaternion.o
 
 librism: $(LIBDIR)/librism.a
+
+$(BINDIR)/rism1d: rism1d.o $(LIBDIR)/librism.a $(LIBDIR)/libxblas-amb.a
+	@echo "[RISM]  FC $@"
+	$(VB)$(FC) $(FFLAGS) -o $@ rism1d.o \
+	        -L$(LIBDIR) -lrism -lxblas-amb $(FLIBSF)
 
 $(LIBDIR)/librism.a: $(LIBOBJ)
 	@echo "[RISM]  AR $@"
 	$(VB)$(AR) $@ $(LIBOBJ) > /dev/null
 	$(VB)$(RANLIB) $@
 
-install: librism 
+install: $(LIBDIR)/librism.a $(BINDIR)/rism1d
 
 uninstall:
-	/bin/rm -f $(LIBDIR)/librism.a
+	/bin/rm -f $(LIBDIR)/librism.a $(BINDIR)/rism1d
 
 clean:
 	-/bin/rm -f *.o *.mod
